--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/code-input": "^5.1.2",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/table": "^1.1.3",
+    "@sanity/vision": "^3.71.2",
+    "next": "14.2.13",
+    "next-sanity": "^9.8.42",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-syntax-highlighter": "^15.6.1",
+    "sanity": "^3.71.2",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "typescript": "^5"
   }
 }
