--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/table": "^1.1.3",
     "@sanity/vision": "^3.71.2",
-    "next": "14.2.13",
+    "next": "^15.1.6",
     "next-sanity": "^9.8.42",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.1",
     "sanity": "^3.71.2",
     "styled-components": "^6.1.14"
